--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
+<!--
+    Statement:
+    @ Killmil Biratch created this.
+    @ If you want to use everything in this project, please remove the section about me, thanks. ^_^
+    @ If possible, please indicate in your project that this section was written by me, or if you don't mark it up it's fine.
+-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="shortcuticon" href="resources/images/favicon.ico" type="image/x-icon" />
-        <title>K`s Personal Web</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="author" content="Killmil Biratch">
+        <meta name="description" content="killmil, biratch, killmil biratch">
+        <meta name="keywords" content="killmil, biratch, killmil biratch">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <title>KB`s Personal Web</title>
+        <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
+
+        <link rel="stylesheet" href="css/style.css">
+
     </head>
     <body>
-        <h2>Hello, guys! </h2>
-        <p>Here is my personal website. Em... Although it looks very humble(or poor). Because I`m just starting to build it.(But progress may be slow, because I`m in the early stages of 'html'.)</p>
-        <p>The following is my personal introduction:</p>
-        <h4>About me</h4>
-        <p>My name is Killmil Biratch (or you can call me Zhang). And I`m currently a college student. I specialize in the field of robot manufacturing and control (Robot Engineering). Thanks to my research field, I can do some simple embedded development and visualization program development. At the same time, I`m also interested in 3D model design. I think I`ve gone too far... *_* Anyway, if you`re interested in any of this (these). You can get in touch with me. Maybe we can do something together. </p>
-        <p>This is my Email address: killmiledc@outlook.com</p>
-        <p>My ORCID code is: <a href="https://orcid.org/0000-0002-8286-4106">https://orcid.org/0000-0002-8286-4106</a> And just in case, I`ll write down my other website address: <a href="https://blog.csdn.net/killmiledc">https://blog.csdn.net/killmiledc</a> (This site may require translation.) </p>
+        <nav>
+            <header class="index-header">
+                <a id="index-a" href="#"><b>Projects</b></a>
+                <a id="index-a" href="#"><b>Blog</b></a>
+                <span id="index-kb">KILLMIL BIRATCH</span>
+                <a id="index-a" href="#"><b>Research</b></a>
+                <a id="index-a" href="#"><b>A & C</b></a>
+            </header>
+        </nav>
     </body>
 </html>
