--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
         <title>KB`s Personal Web</title>
         <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/StyleDay.css" id="style1">
+        <link rel="stylesheet" href="css/StyleNight.css" id="style2" DISABLED>
+        <script type="text/javescript" src="js/ThemeControl.js"></script>
 
     </head>
     <body>
         <nav>
             <header class="index-header">
                 <a id="index-a" href="#"><b>Projects</b></a>
-                <a id="index-a" href="#"><b>Blog</b></a>
+                <a id="index-a" href="#"><b>Bloggers</b></a>
                 <span id="index-kb">KILLMIL BIRATCH</span>
-                <a id="index-a" href="#"><b>Research</b></a>
+                <a id="index-a" href="#"><b>Researches</b></a>
                 <a id="index-a" href="#"><b>A & C</b></a>
             </header>
         </nav>
