--- a/blogs.html
+++ b/blogs.html
@@ -1,9 +1,4 @@
-<!--
-    Statement:
-    @ Killmil Biratch created this.
-    @ If you want to use everything in this project, please remove the section about me, thanks. ^_^
-    @ If possible, please indicate in your project that this section was written by me, or if you don't mark it up it's fine.
--->
+<!--You should check 'index.html' first.-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -24,12 +19,11 @@
     </head>
     <body>
         <nav>
-            <header class="index-header">
-                <a id="index-a" href="projects.html"><b>Projects</b></a>
-                <a id="index-a" href="blogs.html"><b>Blogs</b></a>
-                <span id="index-kb">KILLMIL BIRATCH</span>
-                <a id="index-a" href="resources.html"><b>Researches</b></a>
-                <a id="index-a" href="aboutAndcontact.html"><b>A & C</b></a>
+            <header class="blogs-header">
+                <a id="blogs-header-kb" href="index.html">KILLMIL BIRATCH</a>
+                <a id="blogs-header-a" href="resources.html"><b>Researches</b></a>
+                <a id="blogs-header-a" href="aboutAndcontact.html"><b>A & C</b></a>
+                <a id="blogs-header-a" href="projects.html"><b>Projects</b></a>
             </header>
         </nav>
     </body>
