--- a/aboutAndcontact.html
+++ b/aboutAndcontact.html
@@ -25,6 +25,43 @@
                 <a id="aboutAndcontact-header-a" href="blogs.html"><b>Blogs</b></a>
                 <a id="aboutAndcontact-header-a" href="resources.html"><b>Researches</b></a>
             </header>
+            <div id="aboutAndcontact-div-introduction">
+                <div id="aboutAndcontact-div-img">
+                    <img src="resources/images/hh.jpg" width="300" height="300" oncontextmenu="return false" >
+                </div>
+                <div id="aboutAndcontact-div-resume">
+                    <p><b>Published name: Killmil Biratch</b></p>
+                    <p><b>Full Name: Chen Zhang</b></p>
+                    <p><b>Location: China</b></p>
+                    <p><b>Email: <a href="mailto:killmiledc@outlook.com">killmiledc@outlook.com</a></b></p>
+                    <p><b>Orcid: <a href="https://orcid.org/0000-0002-8286-4106">0000-0002-8286-4106</a></b></p>
+                    <p id="aboutAndcontact-div-resume-contact"><b></b></p>
+                </div>
+            </div>
+            <div id="aboutAndcontact-div-content">
+                <div id="aboutAndcontact-div-eduExp">
+                    <h2><b>Education experience</b></h2>
+                    <div id="aboutAndcontact-div-eduExp-content">
+                        <pre><b>NORTH UNIVERSITY OF CHINA</b>  Shanxi,China</pre>
+                        <p><i>Bachelor of Engineering</i></p>
+                        <p>Research area: Robotics Engineering</p>
+                    </div>
+                </div>
+                <div id="aboutAndcontact-div-content-other">
+                    <div id="aboutAndcontact-div-other-proExp">
+                        <h2><b>Projects</b></h2>
+                        <div id="aboutAndcontact-div-other-proExp-content">
+                        </div>
+                    </div>
+                    <div id="aboutAndcontact-div-other-resExp">
+                        <h2><b>Researches</b></h2>
+                        <div id="aboutAndcontact-div-other-resExp-content">
+                            <p><b>Current research status and future development direction of agricultural robots [TRA]</div></b></p>
+                            <p>Thesis | Agriculural development & Equipments | 2022-06-28</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
     </body>
 </html>
