--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,34 @@
-<!--You should check 'index.html' first.-->
+<!--First, you should know:
+    @ This project is written for my personal website. The vast majority of content is finished by my alone.
+      This is my first time writing a website in html, and there are bound to be some holes.
+      I will modify and optimize them later, but for now this is all I can do.
+    @ All about this project, it applies to a license. You can find it in the project folder.
+      If you want to use all or some content in this project, you must observe this license.
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
         <meta name="author" content="Killmil Biratch">
-        <meta name="description" content="killmil, biratch, killmil biratch">
+
+        <link rel="shortcut icon" href="resources/images/favicon.ico">
+        <title>KB's personal web</title>
+
+        <meta name="description" content="Personal website of Killmil Biratch">
         <meta name="keywords" content="killmil, biratch, killmil biratch">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>KB`s Personal Web</title>
-        <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
-
-        <link rel="stylesheet" href="css/StyleDay.css" id="style1">
-        <link rel="stylesheet" href="css/StyleNight.css" id="style2" DISABLED>
-        <script type="text/javescript" src="js/ThemeControl.js"></script>
-
+        <link rel="stylesheet" href="css/styleDay.css">
     </head>
     <body>
-        <nav>
-            <header class="projects-header">
-                <a id="projects-header-kb" href="index.html">KILLMIL BIRATCH</a>
-                <a id="projects-header-a" href="blogs.html"><b>Blogs</b></a>
-                <a id="projects-header-a" href="resources.html"><b>Researches</b></a>
-                <a id="projects-header-a" href="aboutAndcontact.html"><b>A & C</b></a>
-            </header>
-        </nav>
+        <header>
+            <span id="header-span-a"><a href="index.html">KILLMIL BIRATCH</a></span>
+            <span id="header-span-mark"><b>Projects</b></span>
+            <a id="header-a" href="blogs.html"><b>Blogs</b></a>
+            <a id="header-a" href="researches.html"><b>Researches</b></a>
+            <a id="header-a" href="aAndc.html"><b>A & C</b></a>
+        </header>
+        <div class="div-root">
+        </div>
     </body>
 </html>
