--- a/researches.html
+++ b/researches.html
@@ -24,8 +24,8 @@
         <header>
             <span id="header-span-a"><a href="index.html">KILLMIL BIRATCH</a></span>
             <a id="header-a" href="projects.html"><b>Projects</b></a>
-            <span id="header-span-mark"><b>Blogs</b></span>
-            <a id="header-a" href="researches.html"><b>Researches</b></a>
+            <a id="header-a" href="blogs.html"><b>Blogs</b></a>
+            <span id="header-span-mark"><b>Researches</b></span>
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-root">
