--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!--
-    Statement:
-    @ Killmil Biratch created this.
-    @ If you want to use everything in this project, please remove the section about me, thanks. ^_^
-    @ If possible, please indicate in your project that this section was written by me, or if you don't mark it up it's fine.
+<!--First, you should know:
+    @ This project is written for my personal website. The vast majority of content is finished by my alone.
+      This is my first time writing a website in html, and there are bound to be some holes.
+      I will modify and optimize them later, but for now this is all I can do.
+    @ All about this project, it applies to a license. You can find it in the project folder.
+      If you want to use all or some content in this project, you must observe this license.
 -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
         <meta name="author" content="Killmil Biratch">
-        <meta name="description" content="killmil, biratch, killmil biratch">
+
+        <link rel="shortcut icon" href="resources/images/favicon.ico">
+        <title>KB's personal web</title>
+
+        <meta name="description" content="Personal website of Killmil Biratch">
         <meta name="keywords" content="killmil, biratch, killmil biratch">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>KB`s Personal Web</title>
-        <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
-
-        <link rel="stylesheet" href="css/StyleDay.css" id="style1">
-        <link rel="stylesheet" href="css/StyleNight.css" id="style2" DISABLED>
-        <script type="text/javescript" src="js/ThemeControl.js"></script>
-
+        <link rel="stylesheet" href="css/styleDay.css">
     </head>
     <body>
-        <nav>
-            <header class="index-header">
-                <a id="index-a" href="projects.html"><b>Projects</b></a>
-                <a id="index-a" href="blogs.html"><b>Blogs</b></a>
-                <span id="index-kb">KILLMIL BIRATCH</span>
-                <a id="index-a" href="resources.html"><b>Researches</b></a>
-                <a id="index-a" href="aboutAndcontact.html"><b>A & C</b></a>
-            </header>
-        </nav>
+        <header>
+            <span id="header-span">KILLMIL BIRATCH</span>
+            <a id="header-a" href="projects.html"><b>Projects</b></a>
+            <a id="header-a" href="blogs.html"><b>Blogs</b></a>
+            <a id="header-a" href="researches.html"><b>Researches</b></a>
+            <a id="header-a" href="aAndc.html"><b>A & C</b></a>
+        </header>
     </body>
 </html>
