--- a/aAndc.html
+++ b/aAndc.html
@@ -29,42 +29,42 @@
             <span id="header-span-mark"><b>A & C</b></span>
         </header>
         <div class="div-root">
-            <div class="div-root-contact">
+            <div class="div-root-acContact">
                 <img src="resources/images/hh.jpg" width="250px" height="250px" oncontextmenu="return false">
-                <p><b>Published name: <span id="div-root-contact-span">Killmil Biratch</span></b></p>
+                <p><b>Published name: <span id="div-root-acContact-span">Killmil Biratch</span></b></p>
                 <p><b>Full name: Chen Zhang</b></p>
                 <p><b>Location: China</b></p>
                 <p><b>Email: <a href="mailto:killmiledc@outlook.com">killmiledc@outlook.com</a></b></p>
                 <p><b>Orcid: <a href="https://orcid.org/0000-0002-8286-4106">0000-0002-8286-4106</a></b></p>
             </div>
-            <div class="div-root-content">
-                <div class="div-root-content-edu">
+            <div class="div-root-acContent">
+                <div class="div-root-acContent-edu">
                     <h1><b>Education experience</b></h1>
-                    <div class="div-root-content-eduDetail">
+                    <div class="div-root-acContent-eduDetail">
                         <p><b>NORTH UNIVERSITY OF CHINA</b>&emsp;&emsp;&emsp;&emsp;Shanxi,China</p>
                         <p><i>Bachelor of Engineering</i></p>
                         <p>Research area: Robotics Engineering</p>
                     </div>
                 </div>
-                <div class="div-root-content-other">
-                    <div class="div-root-content-other-pro">
+                <div class="div-root-acContent-other">
+                    <div class="div-root-acContent-other-pro">
                         <h1><b>Projects</b></h1>
-                        <div class="div-root-content-other-proDetail">
+                        <div class="div-root-acContent-other-proDetail">
                             <p><b>K.Translation software</b></p>
                             <p>2022-04-18 | Software | 2022SR0787016 (China)</p>
                         </div>
-                        <div class="div-root-content-other-proDetail">
+                        <div class="div-root-acContent-other-proDetail">
                             <p><b>Cigarette gas filtration device designed based on the principle of air flow</b></p>
                             <p>2022-01-14 | Patent | ZL202120621767.1 (China)</p>
                         </div>
-                        <div class="div-root-content-other-proDetail">
+                        <div class="div-root-acContent-other-proDetail">
                             <p><b>Robotic arm host computer visual monitoring system</b></p>
                             <p>2021-09-15 | Software | 2021SR1799776 (China)</p>
                         </div>
                     </div>
-                    <div class="div-root-content-res">
+                    <div class="div-root-acContent-res">
                         <h1><b>Researches</b></h1>
-                        <div class="div-root-content-resDetail">
+                        <div class="div-root-acContent-resDetail">
                             <p><b>Current research status and future development direction of agricultural robots</b></p>
                             <p>2022-06-28 | Thesis | Agriculural development & Equipments (China)</p>
                         </div>
