--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,15 @@
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-root">
+            <div class="div-root-proContent">
+                <p>2022-04-18&emsp;<a><b>K.Translation software</b></a></p>
+            </div>
+            <div class="div-root-proContent">
+                <p>2022-01-14&emsp;<a><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
+            </div>
+            <div class="div-root-proContent">
+                <p>2021-09-15&emsp;<a><b>Robotic arm host computer visual monitoring system</b></a></p>
+            </div>
         </div>
     </body>
 </html>
