--- a/researches.html
+++ b/researches.html
@@ -29,6 +29,9 @@
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-root">
+            <div class="div-root-resContent">
+                <p>2022-06-28&emsp;<a><b>Current research status and future development direction of agricultural robots</b></a></p>
+            </div>
         </div>
     </body>
 </html>
