--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
         <link rel="stylesheet" href="css/styleDay.css">
     </head>
-    <body>
+    <body class="body-index">
         <header>
             <span id="header-span">KILLMIL BIRATCH</span>
             <a id="header-a" href="projects.html"><b>Projects</b></a>
             <a id="header-a" href="blogs.html"><b>Blogs</b></a>
             <a id="header-a" href="researches.html"><b>Researches</b></a>
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
+            <a id="header-a-right"><b></b></a>
         </header>
     </body>
 </html>
