--- a/aAndc.html
+++ b/aAndc.html
@@ -41,7 +41,7 @@
                 <div class="div-root-acContent-edu">
                     <h1><b>Education experience</b></h1>
                     <div class="div-root-acContent-eduDetail">
-                        <p><b>NORTH UNIVERSITY OF CHINA</b>&emsp;&emsp;&emsp;&emsp;Shanxi,China</p>
+                        <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b>&emsp;&emsp;&emsp;&emsp;Shanxi,China</p>
                         <p><i>Bachelor of Engineering</i></p>
                         <p>Research area: Robotics Engineering</p>
                     </div>
