--- a/aAndc.html
+++ b/aAndc.html
@@ -50,7 +50,7 @@
                     <div class="div-root-acContent-other-pro">
                         <h1><b>Projects</b></h1>
                         <div class="div-root-acContent-other-proDetail">
-                            <p><b>K.Translation software</b></p>
+                            <p><a href="htmls/projects/20210915Robotic.html"><b>K.Translation software</b></a></p>
                             <p>2022-04-18 | Software | 2022SR0787016 (China)</p>
                         </div>
                         <div class="div-root-acContent-other-proDetail">
