--- a/aAndc.html
+++ b/aAndc.html
@@ -50,7 +50,7 @@
                     <div class="div-root-acContent-other-pro">
                         <h1><b>Projects</b></h1>
                         <div class="div-root-acContent-other-proDetail">
-                            <p><a href="htmls/projects/20210915Robotic.html"><b>K.Translation software</b></a></p>
+                            <p><b>K.Translation software</b></p>
                             <p>2022-04-18 | Software | 2022SR0787016 (China)</p>
                         </div>
                         <div class="div-root-acContent-other-proDetail">
@@ -58,7 +58,7 @@
                             <p>2022-01-14 | Patent | ZL202120621767.1 (China)</p>
                         </div>
                         <div class="div-root-acContent-other-proDetail">
-                            <p><b>Robotic arm host computer visual monitoring system</b></p>
+                            <p><a href="htmls/projects/20210915Robotic.html"></a><b>Robotic arm host computer visual monitoring system</b></a></p>
                             <p>2021-09-15 | Software | 2021SR1799776 (China)</p>
                         </div>
                     </div>
