--- a/aAndc.html
+++ b/aAndc.html
@@ -58,7 +58,7 @@
                             <p>2022-01-14 | Patent | ZL202120621767.1 (China)</p>
                         </div>
                         <div class="div-root-acContent-other-proDetail">
-                            <p><a href="htmls/projects/20210915Robotic.html"></a><b>Robotic arm host computer visual monitoring system</b></a></p>
+                            <p><a href="htmls/projects/20210915Robotic.html"><b>Robotic arm host computer visual monitoring system</b></a></p>
                             <p>2021-09-15 | Software | 2021SR1799776 (China)</p>
                         </div>
                     </div>
