--- a/htmls/projects/20210915Robotic.html
+++ b/htmls/projects/20210915Robotic.html
@@ -29,11 +29,14 @@
             <a id="header-a" href="../../aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-coRoot">
-            <div class="div-coRoot-coDirectory">
+            <!--div class="div-coRoot-coDirectory">
                 <h1>Directory</h1>
                 <div class="div-coRoot-coDirectoryContent">
+                    <p><a href="#h4-1">EN</a></p>
+                    <p><a href="#h4-2">CN</a></p>
+                    <p><a href="#h4-3">TC</a></p>
                 </div>
-            </div>
+            </div-->
             <div class="div-coRoot-coContent">
                 <div class="div-coRoot-coNotice">
                     <p><b>The text, illustrations, etc. contained in this page and affiliated links follow <a>Partially open sharing protocol</a>.</b></p>
@@ -41,13 +44,19 @@
                 </div>
                 <h1 id="div-coRoot-coNotice-h1">Robotic arm host computer visual monitoring system</h1>
                 <p id="div-coRoot-coNotice-dateAndMark">2021-09-15 | Software | EN & CN & TC</p>
-                <h4>CN</h4>
+                <h4 id="h4-1">EN</h4>
+                <p>This paper describes an executable program that can run under Microsoft Windows operating system, named "Robotic arm host computer visual monitoring system" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2021SR1799776"). According to the relevant provisions of the Berne Convention for the Protection of Literary and Artistic Works<sup>[1]</sup> and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.<sup>[2]</sup></p>
+                <p>The purpose of the software development is to provide a comprehensive service for the monitoring of robotic arms (or to monitor the working status of small robotic arms). The software is programmed in Java and is intended for the industry "robotic arm monitoring". The main function of the software is "to carry out information management of robotic arm upper monitoring, to complete the relevant data integration, to carry out data management of robotic arm upper monitoring, to complete robotic arm upper monitoring processing, to use the software to run automatically, to assist users in operation and processing, and to realize reasonable robotic arm upper monitoring". The software has the following technical features: "Cloud computing software, using a hybrid separation model, makes the design and system operation organic, by optimizing the processing of the data engine to complete the operation of the software."<sup>[2]</sup></p>
+                <h4 id="h4-2">CN</h4>
                 <p>本文所述为一款可运行在搭载了Microsoft Windows系统的计算机上的可执行程序，名称为“机械臂上位机可视化监控系统”（以下简称“该软件、软件”），版本号为“V1.0”。该软件依据《中华人民共和国计算机软件保护条例》和《中华人民共和国计算机软件著作权登记办法》中的有关规定，被中华人民共和国国家版权局登记在案（登记号为“2021SR1799776”）。依据《保护文学和艺术作品伯尔尼公约》（Berne Convention for the Protection of Literary and Artistic Works）<sup>[1]</sup>和《中华人民共和国著作权法》等有关公约或法律文本的规定，著作权人（们）全体对软件享有完全的著作权和其他应享有的全部合法权利。<sup>[2]</sup></p>
                 <p>该软件是为了监控小型机械臂工作时的运动状态而开发的。软件采用Java语言编程，面向行业为“机械臂上位机监控”。该软件的主要功能有：“机械臂上位机可视化监控系统，可以对机械臂上位机监控进行信息化的管理，完成相关的数据整理和处理，进行机械臂上位机监控的数据管理，完成机械臂上位机监控处理，将自动化模式融入到软件中，协助用户操作和处理，实现合理的机械臂上位机监控模式处理。”软件具有以下技术特点：“云计算软件，采用混合分离模式，使得设计与系统运行有机的分离，通过优化数据引擎的处理，完成软件的设计和操作。”<sup>[2]</sup></p>
-                <h4>TC</h4>
+                <h4 id="h4-3">TC</h4>
                 <p>本文所述為一款可運行在搭載了Microsoft Windows系統的計算機上的可執行程序，名稱為「機械臂上位機可視化監控系統」（以下簡稱「該軟體、軟體」），版本號為「V1.0」。該軟體依據《中華人民共和國電腦軟體保護條例》和《中華人民共和國電腦軟體著作權登記辦法》中的有關規定，被中華人民共和國國家版權局登記在案（登記號為「2021SR1799776」）。依據《保護文學和藝術作品伯爾尼公約》（Berne Convention for the Protection of Literary and Artistic Works）<sup>[1]</sup>和《中華人民共和國著作權法》等有關公約或法律文本的規定，著作權人（們）全體對軟件享有完全的著作權和其他應享有的全部合法權利。<sup>[2]</sup></p>
                 <p>該軟體是為了監控小型機械臂工作時的運動狀態而開發的。軟體採用Java語言編程，面向行業為「機械臂上位機監控」。該軟體的主要功能有：「機械臂上位機可視化監控系統，可以對機械臂上位機監控進行資訊化的管理，完成相關的數據整理和處理，進行機械臂上位機監控的數據管理，完成機械臂上位機監控處理，將自動化模式融入到軟體中，協助用戶操作和處理，實現合理的機械臂上位機監控模式處理。」軟體具有以下技術特點：「雲端運算軟體，採用混合分離模式，使得設計與系統運行有機的分離，通過優化數據引擎的處理，完成軟體的設計和操作。」<sup>[2]</sup></p>
-                <p></p>
+                <br>
+                <h4>Resources</h4>
+                <p>[1] <a href="https://www.wipo.int/treaties/en/ip/berne/summary_berne.html">Summary of the Berne Convention for the Protection of Literary and Artistic Works</a></p>
+                <p>[2] <a href="https://www.ccopyright.com.cn/">Copyright Protection Center of China</a></p>
             </div>
         </div>
     </body>
