--- a/htmls/projects/20210915Robotic.html
+++ b/htmls/projects/20210915Robotic.html
@@ -57,6 +57,9 @@
                 <h4>Resources</h4>
                 <p>[1] <a href="https://www.wipo.int/treaties/en/ip/berne/summary_berne.html">Summary of the Berne Convention for the Protection of Literary and Artistic Works</a></p>
                 <p>[2] <a href="https://www.ccopyright.com.cn/">Copyright Protection Center of China</a></p>
+                <br>
+                <h4>Attachments</h4>
+                <p>[1] <a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf" target="_blank">Proof of software registration</a></p>
             </div>
         </div>
     </body>
