--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <p>2022-04-18&emsp;<a><b>K.Translation software</b></a></p>
             </div>
             <div class="div-root-proContent">
-                <p>2022-01-04&emsp;<a><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
+                <p>2022-01-04&emsp;<a href="htmls/projects/20220104Cigarette.html"><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
             </div>
             <div class="div-root-proContent">
                 <p>2021-09-15&emsp;<a href="htmls/projects/20210915Robotic.html"><b>Robotic arm host computer visual monitoring system</b></a></p>
