--- a/htmls/projects/20220104Cigarette.html
+++ b/htmls/projects/20220104Cigarette.html
@@ -56,6 +56,9 @@
                 <p>本發明（專利）涉及一種香煙煙氣過濾裝置的創新、改進，尤其是當香煙在空曠的開放場所燃燒時，本發明（專利）能對主流煙和支流煙起到很好的過濾作用。</p>
                 <p>隨著煙民數量的日益增長，香煙氣污染越來越嚴重，香煙氣體在大氣環境污染物中占比也越來越大。目前，市面上傳統的香菸氣過濾器大多只能對主流菸進行過濾，而且過濾效率並不是很高。並且，因為傳統煙過濾器濾芯的不可更換性以及裝置的一體性，使得很大一部分的過濾器只使用了幾次就被丟棄，這不僅加速了資源的過渡消耗，而且也對環境造成了極大的破壞。本發明（專利）的目的是針對上述不足，提供一種既能高效過濾煙氣，又能減少資源消耗的香菸氣過濾裝置。</p>
                 <p>本發明（專利）具有便攜、易操作等特點，有很好的推廣和實用價值，在廣泛化推廣應用後也會產生良好的經濟效益和社會效益。</p>
+                <br>
+                <h4>Attachments</h4>
+                <p>[1] <a href="../../resources/Attachments/projects/20220104Cigarette/20220104Cigarette-annex1.pdf" target="_blank">Patent Grant Certificate</a></p>
             </div>
         </div>
     </body>
