--- a/aAndc.html
+++ b/aAndc.html
@@ -50,11 +50,11 @@
                     <div class="div-root-acContent-other-pro">
                         <h1><b>Projects</b></h1>
                         <div class="div-root-acContent-other-proDetail">
-                            <p><b>K.Translation software</b></p>
+                            <p><a href="htmls/projects/20220418K.html"><b>K.Translation software</b></a></p>
                             <p>2022-04-18 | Software | 2022SR0787016 (China)</p>
                         </div>
                         <div class="div-root-acContent-other-proDetail">
-                            <p><b>Cigarette gas filtration device designed based on the principle of air flow</b></p>
+                            <p><a href="htmls/projects/20220104Cigarette.html"><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
                             <p>2022-01-04 | Patent | ZL202120621767.1 (China)</p>
                         </div>
                         <div class="div-root-acContent-other-proDetail">
