--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
         </header>
         <div class="div-root">
             <div class="div-root-proContent">
-                <p>2022-04-18&emsp;<a><b>K.Translation software</b></a></p>
+                <p>2022-04-18&emsp;<a href="htmls/projects/20220418K.html"><b>K.Translation software</b></a></p>
             </div>
             <div class="div-root-proContent">
                 <p>2022-01-04&emsp;<a href="htmls/projects/20220104Cigarette.html"><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
