--- a/htmls/projects/20220418K.html
+++ b/htmls/projects/20220418K.html
@@ -29,11 +29,11 @@
             <a id="header-a" href="../../aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-coRoot">
-            <div class="div-coRoot-coDirectory">
+            <!--div class="div-coRoot-coDirectory">
                 <h1>Directory</h1>
                 <div class="div-coRoot-coDirectoryContent">
                 </div>
-            </div>
+            </div-->
             <div class="div-coRoot-coContent">
                 <div class="div-coRoot-coNotice">
                     <p><b>The text, illustrations, etc. contained in this page and affiliated links follow <a>Partially open sharing protocol</a>.</b></p>
