--- a/aAndc.html
+++ b/aAndc.html
@@ -65,8 +65,8 @@
                     <div class="div-root-acContent-res">
                         <h1><b>Researches</b></h1>
                         <div class="div-root-acContent-resDetail">
-                            <p><b>Current research status and future development direction of agricultural robots</b></p>
-                            <p>2022-06-28 | Thesis | Agriculural development & Equipments (China)</p>
+                            <p><a href="htmls/researches/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a></p>
+                            <p>2022-06-28 | Journal issue | Agriculural development & Equipments (China)</p>
                         </div>
                     </div>
                 </div>
