--- a/researches.html
+++ b/researches.html
@@ -30,7 +30,7 @@
         </header>
         <div class="div-root">
             <div class="div-root-resContent">
-                <p>2022-06-28&emsp;<a><b>Current research status and future development direction of agricultural robots</b></a></p>
+                <p>2022-06-28&emsp;<a href="htmls/researches/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a></p>
             </div>
         </div>
     </body>
