--- a/htmls/projects/20220104Cigarette.html
+++ b/htmls/projects/20220104Cigarette.html
@@ -39,8 +39,8 @@
                     <p><b>The text, illustrations, etc. contained in this page and affiliated links follow <a>Partially open sharing protocol</a>.</b></p>
                     <p id="div-coRoot-coNotice-p">111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111</p>
                 </div>
-                <h1 id="div-coRoot-coNotice-h1">Cigarette gas filtration device designed based on the principle of air flow</h1>
-                <p id="div-coRoot-coNotice-dateAndMark">2022-01-04 | Patent | EN & CN & TC</p>
+                <h1 id="div-coRoot-coContent-h1">Cigarette gas filtration device designed based on the principle of air flow</h1>
+                <p id="div-coRoot-coContent-dateAndMark">2022-01-04 | Patent | EN & CN & TC</p>
                 <h4>EN</h4>
                 <p>This paper describes a patent entitled "Cigarette gas filtration device designed based on the principle of air flow" (hereinafter referred to as the "Invention (Patent)"). This invention (patent) (Patent No. "ZL202120621767.1") is registered and granted by the State Intellectual Property Office of the People's Republic of China in accordance with the relevant provisions of the Patent Law of the People's Republic of China, and the patent right is effective from March 28, 2021 and is valid for ten years. According to the provisions of the Patent Law of the People's Republic of China and other legal texts, the patentee(s) shall enjoy full patent rights and all other legal rights to the invention (patent).</p>
                 <p>The present invention (patent) describes a new cigarette gas filtering device by which the smoke released from cigarettes burned in open spaces can be efficiently filtered.</p>
