--- a/htmls/projects/20220418K.html
+++ b/htmls/projects/20220418K.html
@@ -39,8 +39,8 @@
                     <p><b>The text, illustrations, etc. contained in this page and affiliated links follow <a>Partially open sharing protocol</a>.</b></p>
                     <p id="div-coRoot-coNotice-p">111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111</p>
                 </div>
-                <h1 id="div-coRoot-coNotice-h1">K.Translation software</h1>
-                <p id="div-coRoot-coNotice-dateAndMark">2022-04-18 | Software | EN & CN & TC</p>
+                <h1 id="div-coRoot-coContent-h1">K.Translation software</h1>
+                <p id="div-coRoot-coContent-dateAndMark">2022-04-18 | Software | EN & CN & TC</p>
                 <h4>EN</h4>
                 <p>This paper describes an executable program that can run under Microsoft Windows operating system, named "K.Translation software" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2022SR0787016"). According to the relevant provisions of the Berne Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
                 <p>This software can realize the function of instant translation of texts in two different languages, and the input text can be quickly converted into the target language text through this software.</p>
