--- a/blogs.html
+++ b/blogs.html
@@ -29,6 +29,9 @@
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-root">
+            <div class="div-root-proContent">
+                <p>2022-09-28&emsp;<a href="htmls/blogs/20220928The.html"><b>The first blog: some things I want to tell you and arrangements related to the future.</b></a></p>
+            </div>
         </div>
     </body>
 </html>
