--- a/blogs.html
+++ b/blogs.html
@@ -32,6 +32,9 @@
             <div class="div-root-proContent">
                 <p>2022-09-28&emsp;<a href="htmls/blogs/20220928The.html"><b>The first blog: some things I want to tell you and arrangements related to the future.</b></a></p>
             </div>
+            <div class="div-root-proContent">
+                <p>2022-09-30&emsp;<a href="htmls/blogs/20220930Planning.html"><b>Planning for the next three months (from October 2022 to December 2022).</b></a></p>
+            </div>
         </div>
     </body>
 </html>
