--- a/blogs.html
+++ b/blogs.html
@@ -29,10 +29,10 @@
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
         </header>
         <div class="div-root">
-            <div class="div-root-proContent">
+            <div class="div-root-blogContent">
                 <p>2022-09-28&emsp;<a href="htmls/blogs/20220928The.html"><b>The first blog: some things I want to tell you and arrangements related to the future.</b></a></p>
             </div>
-            <div class="div-root-proContent">
+            <div class="div-root-blogContent">
                 <p>2022-09-30&emsp;<a href="htmls/blogs/20220930Planning.html"><b>Planning for the next three months (from October 2022 to December 2022).</b></a></p>
             </div>
         </div>
