--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
         <link rel="stylesheet" href="css/styleDay.css">
     </head>
     <body class="body-index">
-        <header>
+        <h1>The Web is rebuilding, Please waiting...</h1>
+        <!--header>
             <span id="header-span">KILLMIL BIRATCH</span>
             <a id="header-a" href="projects.html"><b>Projects</b></a>
             <a id="header-a" href="blogs.html"><b>Blogs</b></a>
             <a id="header-a" href="researches.html"><b>Researches</b></a>
             <a id="header-a" href="aAndc.html"><b>A & C</b></a>
-        </header>
+        </header-->
     </body>
 </html>
