--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
-<!--First, you should know:
-    @ This project is written for my personal website. The vast majority of content is finished by my alone.
-      This is my first time writing a website in html, and there are bound to be some holes.
-      I will modify and optimize them later, but for now this is all I can do.
-    @ All about this project, it applies to a license. You can find it in the project folder.
-      If you want to use all or some content in this project, you must observe this license.
--->
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Killmil Biratch">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="author" content="Killmil Biratch">
 
-        <link rel="shortcut icon" href="resources/images/favicon.ico">
-        <title>KB's personal web</title>
+    <link rel="shortcut icon" href="resources/images/favicon.svg">
+    <title>Killmil Biratch</title>
 
-        <meta name="description" content="Personal website of Killmil Biratch">
-        <meta name="keywords" content="killmil, biratch, killmil biratch">
+    <meta name="description" content="Personal website of Killmil Biratch">
+    <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-        <link rel="stylesheet" href="css/styleDay.css">
-    </head>
-    <body class="body-index">
-        <h1>The Web is rebuilding, Please waiting...</h1>
-        <!--header>
-            <span id="header-span">KILLMIL BIRATCH</span>
-            <a id="header-a" href="projects.html"><b>Projects</b></a>
-            <a id="header-a" href="blogs.html"><b>Blogs</b></a>
-            <a id="header-a" href="researches.html"><b>Researches</b></a>
-            <a id="header-a" href="aAndc.html"><b>A & C</b></a>
-        </header-->
-    </body>
+    <link rel="stylesheet" href="css/StylePc1366.css">
+  </head>
+  <body>
+    <div class="div-root">
+      <header>
+        <h1 id="headerTitle"><b>KILLMIL BIRATCH</b></h1>
+        <p id="iconfont">&#xe64c;</p>
+      </header>
+      <div class="div-rootMenu">
+        <a><p><b>Projects</b></p></a>
+        <a><p><b>Blogs</b></p></a>
+        <a><p><b>Researches</b></p></a>
+        <a href="about.html"><P><b>A & C</b></P></a>
+      </div>
+    </div>
+  </body>
 </html>
