--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div class="div-root">
       <header>
         <h1 id="headerTitle"><b>KILLMIL BIRATCH</b></h1>
-        <p id="iconfont">&#xe64c;</p>
+        <div class="headerContact">
+          <a id="iconfont" href="https://orcid.org/0000-0002-8286-4106">&#xe552;</a>
+          <a id="iconfont" href="https://github.com/KILLMILEDC">&#xe603;</a>
+          <a id="iconfont" href="mailto:killmiledc@outlook.com">&#xe610;</a>
+        </div>
       </header>
       <div class="div-rootMenu">
         <a><p><b>Projects</b></p></a>
