--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--First, you should know:
+    @ This project is written for my personal website. The vast majority of content is finished by my alone.
+      This is my first time writing a website in html, and there are bound to be some holes.
+      I will modify and optimize them later, but for now this is all I can do.
+    @ All about this project, it applies to a license. You can find it in the project folder.
+      If you want to use all or some content in this project, you must observe this license.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
