--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/StylePc1366.css">
   </head>
   <body>
-    <div class="div-root">
+    <div class="div-root-about">
       <header>
         <img src="resources/images/hh.jpg" width="250rem" height="250rem" oncontextmenu="return false">
         <div class="headerPersonalDetails">
@@ -35,7 +35,11 @@
       </header>
       <div class="div-rootEducationExperience">
         <h1>Education Experience</h1>
-        <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b>&emsp;&emsp;Shanxi,China</p>
+        <div class="div-rootEducationExperienceDetails">
+          <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b>&emsp;&emsp;Shanxi,China</p>
+          <p><i>Bachelor of Engineering</i></p>
+          <p>Research area: Robotics Engineering</p>
+        </div>
       </div>
     </div>
   </body>
