--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <header>
         <img src="resources/images/hh.jpg" width="250rem" height="250rem" oncontextmenu="return false">
         <div class="headerPersonalDetails">
-          <p>Published name: killmil biratch</p>
+          <p>Published name: <a href="index.html">killmil biratch</a></p>
           <p>Full name: Chen Chang</p>
           <p>Location: China</p>
           <p>Orcid: <a href="https://orcid.org/0000-0002-8286-4106">0000-0002-8286-4106</a></p>
@@ -34,7 +34,7 @@
         </div>
       </header>
       <div class="div-rootEducationExperience">
-        <h1>Education Experience</h1>
+        <h2>Education Experience</h2>
         <div class="div-rootEducationExperienceDetails">
           <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b>&emsp;&emsp;Shanxi,China</p>
           <p><i>Bachelor of Engineering</i></p>
