--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
       If you want to use all or some content in this project, you must observe this license.
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html-others">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
@@ -20,26 +20,43 @@
 
     <link rel="stylesheet" href="css/StylePc1366.css">
   </head>
-  <body>
-    <div class="div-root-about">
-      <header>
-        <a href="index.html"><img src="resources/images/hh.jpg" width="250rem" height="250rem" oncontextmenu="return false"></a>
-        <div class="header-PersonalDetails">
-          <p>Published name: <a href="index.html">killmil biratch</a></p>
-          <p>Full name: Chen Chang</p>
-          <p>Location: China</p>
-          <p>Orcid: <a href="https://orcid.org/0000-0002-8286-4106">0000-0002-8286-4106</a></p>
-          <p>Github: <a href="https://github.com/KILLMILEDC">KILLMILEDC</a></p>
-          <p>Email: <a href="mailto:killmiledc@outlook.com">killmiledc@outlook.com</a></p>
-        </div>
+  <body class="body-others">
+    <div class="div-root-research">
+      <header class="header-NormalHeader">
+        <h1><a href="index.html">Researches</a></h1>
       </header>
-      <div class="div-root-about-EducationExperience">
-        <h2>Education Experience</h2>
-        <div class="div-root-about-EducationExperience-Details">
-          <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b>&emsp;&emsp;Shanxi,China</p>
-          <p><i>Bachelor of Engineering</i></p>
-          <p>Research area: Robotics Engineering</p>
-        </div>
+      <div class="div-root-research-Content">
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
+        <p>hello word</p>
+        <p>222</p>
       </div>
     </div>
   </body>
