--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
   <body>
     <div class="div-root">
       <header>
-        <h1 id="headerTitle"><b>KILLMIL BIRATCH</b></h1>
-        <div class="headerContact">
+        <h1 id="header-Title"><b>KILLMIL BIRATCH</b></h1>
+        <div class="header-Contact">
           <a id="iconfont" href="https://orcid.org/0000-0002-8286-4106">&#xe552;</a>
           <a id="iconfont" href="https://github.com/KILLMILEDC">&#xe603;</a>
           <a id="iconfont" href="mailto:killmiledc@outlook.com">&#xe610;</a>
         </div>
       </header>
-      <div class="div-rootMenu">
+      <div class="div-root-Menu">
         <a><p><b>Projects</b></p></a>
         <a><p><b>Blogs</b></p></a>
-        <a><p><b>Researches</b></p></a>
+        <a href="research.html"><p><b>Researches</b></p></a>
         <a href="about.html"><P><b>A & C</b></P></a>
       </div>
     </div>
