--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
       </header>
       <div class="div-root-Menu">
-        <a><p><b>Projects</b></p></a>
-        <a><p><b>Blogs</b></p></a>
+        <a href="project.html"><p><b>Projects</b></p></a>
+        <a href="blog.html"><p><b>Blogs</b></p></a>
         <a href="research.html"><p><b>Researches</b></p></a>
         <a href="about.html"><P><b>A & C</b></P></a>
       </div>
