--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <div class="header-PersonalDetails">
           <p>Published name: <a href="index.html">killmil biratch</a></p>
           <p>Full name: Chen Chang</p>
-          <p>Location: China</p>
+          <p>Location: Hong Kong</p>
           <p>Orcid: <a href="https://orcid.org/0000-0002-8286-4106">0000-0002-8286-4106</a></p>
           <p>Github: <a href="https://github.com/KILLMILEDC">KILLMILEDC</a></p>
           <p>Email: <a href="mailto:killmiledc@outlook.com">killmiledc@outlook.com</a></p>
