--- a/research.html
+++ b/research.html
@@ -26,43 +26,7 @@
         <h1><a href="index.html">Researches</a></h1>
       </header>
       <div class="div-root-research-Content">
-        <p>hello word pppppppp ajfk djwioi pppopoo poifwf ofkwpf qdqwdowqd jdoiqwjd jdqowjd djqwoidj djqwojdijf jdi</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
-        <p>hello word</p>
-        <p>222</p>
+        <p>2022-06-28&emsp;&emsp;<a><b>Current research status and future development direction of agricultural robots</b></a></p>
       </div>
     </div>
   </body>
